--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,4 @@
 .container {
-  display: flex;
-  flex: 1;
-  justify-content: center;
-}
-
-.editor {
-  /* width: 80vw; */
   width: 100%;
+  background: #f6f6f6;
 }
