--- a/src/index.css
+++ b/src/index.css
@@ -3,16 +3,11 @@
   --red: #cd0d23;
 }
 
-html {
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  background: #272822;
-}
-
+html,
 body {
-  height: 100%;
-  width: 100%;
+  box-sizing: border-box;
+  /* height: 100%; */
+  min-height: 100%;
 }
 
 *,
@@ -33,11 +28,10 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 400;
+  /* font-weight: 400; */
 }
 
 :global(#root) {
   display: flex;
-  flex: 1;
-  height: 100vh;
+  min-height: 100%;
 }
