--- a/src/components/Editor/Editor.css
+++ b/src/components/Editor/Editor.css
@@ -2,12 +2,19 @@
   flex: 1;
   width: 80ch;
   margin: auto;
-  font-size: 16px;
-  font-family: "Roboto Mono", sans-serif;
-  /* letter-spacing: 0px; */
 }
 
 :global(.DraftEditor-editorContainer .public-DraftEditor-content) {
   padding: 40px 20px 50vh;
   min-height: 100vh;
+}
+
+.Roboto-Mono {
+  font-family: "Roboto Mono", sans-serif;
+  font-size: 16px;
+}
+
+.Karla {
+  font-family: "Karla", sans-serif;
+  font-size: 18px;
 }
