--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,19 @@
 html,
 body {
   box-sizing: border-box;
-  /* height: 100%; */
   min-height: 100%;
-  background: rgba(20, 20, 20, 1);
+  background: #f6f6f6;
+}
+
+/* Display html when font loaded */
+body {
+  opacity: 0;
+  /* transform: translate3d(50px, 0, 0); */
+  transition: opacity 400ms, transform 400ms;
+}
+:global(html.wf-active body) {
+  /* transform: translate3d(0, 0, 0); */
+  opacity: 1;
 }
 
 *,
