--- a/src/components/Settings/Settings.css
+++ b/src/components/Settings/Settings.css
@@ -6,9 +6,13 @@
   display: flex;
   color: white;
   border: none;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
   padding: 20px 0;
   margin: 0 30px;
+}
+
+.fieldset:last-child {
+  border: none;
 }
 
 .fieldset h3 {
@@ -22,15 +26,11 @@
 }
 
 .choices label {
-  color: white;
   font-size: 16px;
-  margin-left: 10px;
 }
 
 .radio {
-  display: flex;
-  align-items: center;
-  margin-bottom: 6px;
+  margin-bottom: 10px;
 }
 
 .fontSize .choices {
@@ -55,3 +55,13 @@
   font-size: 16px;
   margin: 0 10px;
 }
+
+/* --- night mode --- */
+
+/* .nightmode.container {
+  background: white;
+}
+.nightmode .fieldset,
+.nightmode .fontSize .choices button i {
+  color: black;
+} */
