--- a/src/App.css
+++ b/src/App.css
@@ -21,29 +21,10 @@
 }
 
 .settings {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   z-index: 1;
   width: 300px;
-}
-
-.settingsButton {
-  cursor: pointer;
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  z-index: 3;
-  color: black;
-  border: none;
-  background: none;
-  opacity: 0.3;
-  transition: opacity 600ms;
-}
-.settingsButton:hover {
-  opacity: 1;
-}
-.nightmode .settingsButton {
-  color: white;
 }
