--- a/src/components/Radio/Radio.css
+++ b/src/components/Radio/Radio.css
@@ -9,9 +9,9 @@
 
 .container input + label {
   position: relative;
+  height: 20px;
   padding-left: 26px;
   cursor: pointer;
-  display: inline-block;
   display: flex;
   align-items: center;
 }
@@ -30,7 +30,6 @@
   height: 10px;
   background: goldenrod;
   position: absolute;
-  top: 4px;
   left: 3px;
   border-radius: 100%;
   transition: all 400ms ease;
