--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,13 @@
   position: relative;
   z-index: 2;
   transition: transform 400ms;
-  /* transition: margin 500ms; */
   box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.2);
 }
 .container.settingsOpen .editor {
   transform: translate3d(-300px, 0, 0);
-  /* margin-left: 400px; */
+}
+.container.listOpen .editor {
+  transform: translate3d(300px, 0, 0);
 }
 
 .settingsButton {
@@ -38,6 +39,15 @@
   top: 0;
   bottom: 0;
   right: 0;
+  z-index: 1;
+  width: 300px;
+}
+
+.notesList {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
   z-index: 1;
   width: 300px;
 }
