--- a/src/components/NotesList/NotesList.css
+++ b/src/components/NotesList/NotesList.css
@@ -32,7 +32,7 @@
 }
 
 .note:hover {
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.15);
 }
 
 .note:hover .remove {
@@ -40,7 +40,8 @@
 }
 
 .note.active {
-  background: rgba(255, 255, 255, 0.15);
+  background: var(--main);
+  color: white;
 }
 .note.active input {
   font-weight: 700;
