--- a/src/components/NotesList/NotesListItem.css
+++ b/src/components/NotesList/NotesListItem.css
@@ -1,15 +1,20 @@
 .note {
   display: flex;
+}
+
+/* Need to user .wrapper here because there is a transition on li for react-sort-hoc */
+.wrapper {
+  display: flex;
   align-items: center;
   color: white;
   width: 100%;
   text-align: left;
-  /* transition: background 300ms, transform 300ms; */
   padding: 20px 15px;
   cursor: pointer;
+  transition: background 300ms;
 }
 
-.note input {
+.wrapper input {
   color: white;
   font-size: 17px;
   background: none;
@@ -18,15 +23,15 @@
   cursor: pointer;
 }
 
-.note:hover {
+.wrapper:hover {
   background: rgba(255, 255, 255, 0.15);
 }
 
-.note:hover .remove {
+.wrapper:hover .remove {
   display: block;
 }
 
-.note.active {
+.note.active .wrapper {
   background: var(--main);
   color: white;
 }
@@ -37,5 +42,5 @@
 .handle {
   margin-right: 15px;
   cursor: move;
-  color: rgba(255, 255, 255, 0.4);
+  color: rgba(255, 255, 255, 0.6);
 }
