--- a/src/components/NotesList/NotesList.css
+++ b/src/components/NotesList/NotesList.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: center;
   background: rgba(20, 20, 20, 1);
-  padding-top: 30px;
+  padding: 30px 0;
+  overflow-y: scroll;
 }
 
 .notes {
