--- a/src/components/NotesList/NotesList.css
+++ b/src/components/NotesList/NotesList.css
@@ -4,7 +4,7 @@
   align-items: center;
   background: rgba(20, 20, 20, 1);
   padding: 20px 0;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .notes {
