--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,16 @@
   background: black;
 }
 
+.container.loading {
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+}
+.container.loading p {
+  font-size: 16px;
+}
+
 .editor {
   position: relative;
   z-index: 2;
