--- a/src/index.css
+++ b/src/index.css
@@ -8,13 +8,13 @@ html {
 }
 html,
 body {
-  min-height: 100%;
+  height: 100%;
   font-family: "Roboto Mono", monospace;
 }
 
 /* Display html when font loaded */
 body {
-  opacity: 0;
+  /* opacity: 0; */
   transition: opacity 300ms;
   overflow-x: hidden;
 }
