draft-js-markdown-shortcuts-plugin

--- a/src/components/Editor/Editor.css
+++ b/src/components/Editor/Editor.css
@@ -37,3 +37,13 @@
 :global(.draftJsLinkifyPlugin__link__2ittM:hover) {
   color: var(--main);
 }
+
+/* Lists 1, 2, 3 */
+
+/* :global(.public-DraftStyleDefault-depth0.public-DraftStyleDefault-listLTR) {
+  margin-left: 36px;
+} */
+
+:global(.public-DraftStyleDefault-ol) {
+  margin-left: 10px;
+}
